# AndrolineHook

./: AndroHook.hpp  AndroUtils.hpp  CONTRIBUTING.md  Example.cpp  README.md  androline.cpp  example(Application).cpp  example(Game).cpp  settings.gradle
.androidide/editor/: openedFiles.json
app/: build.gradle
app/src/main/cpp/: AndroHook.hpp  AndroScanner.hpp  AndroUtils.hpp  AndroWriteData.cpp  AndroWriteData.hpp  CMakeLists.txt  androline.cpp  androline.h
app/src/main/java/com/dev/androline/: MainActivity.java
app/src/main/res/values/: strings.xml
